wiringGpioExtensions_DotNet/wiringGpioExtensions/wiringGpioExtensions.cs


        [DllImport("libWiringPiExtension.so", EntryPoint = "StepperStep")]
        public static extern void Step(int index, int numberSteps);

        [DllImport("libWiringPiExtension.so", EntryPoint = "StepperSpin")]
        public static extern void Spin(int index, int direction);

        [DllImport("libWiringPiExtension.so", EntryPoint = "StepperSetSpeed")]
        public static extern void SetSpeed(int index, float percent);

        [DllImport("libWiringPiExtension.so", EntryPoint = "StepperStop")]
        public static extern void Stop(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "StepperGetTachoCount")]
        public static extern int GetTachoCount(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "StepperResetTachoCount")]
        public static extern void ResetTachoCount(int index);
    }


    /// <summary>
    /// Seven Segment Display
    /// </summary>
    public class SevenSegDisplay
    {
        [DllImport("libWiringPiExtension.so", EntryPoint = "SevenSegDisplayCreateFromXml")]
        public static extern int CreateFromXml(string xml);

        [DllImport("libWiringPiExtension.so", EntryPoint = "SevenSegDisplayCreate")]
        public static extern int Create(int[] segPins, int numDigits, int[] digitPins);

        [DllImport("libWiringPiExtension.so", EntryPoint = "SevenSegDisplayRemove")]
        public static extern void Remove(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "SevenSegDisplayOff")]
        public static extern void Off(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "SevenSegDisplaySetDelay")]
        public static extern void SetDelay(int index, int delay);

        [DllImport("libWiringPiExtension.so", EntryPoint = "SevenSegDisplaySet")]
        public static extern void Set(int index, string display);
    }


    /// <summary>
    /// Rotary Encoder
    /// </summary>
    //
    public delegate void EncoderUpdatedCallback(int count);
    //
    public class RotaryEncoder
    {
        [DllImport("libWiringPiExtension.so", EntryPoint = "RotaryEncoderCreate")]
        public static extern int Create(int pinA, int pinB, int pinIndex, int countsPerRevolution, EncoderUpdatedCallback callback);

        [DllImport("libWiringPiExtension.so", EntryPoint = "RotaryEncoderRemove")]
        public static extern void Remove(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "RotaryEncoderGetCount")]
        public static extern int GetCount(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "RotaryEncoderGetRpm")]
        public static extern double GetRpm(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "RotaryEncoderGetFrequency")]
        public static extern double GetFrequency(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "RotaryEncoderResetCount")]
        public static extern void ResetCount(int index, int setCount);
    }


    /// <summary>
    /// Motor with Rotary Encoder
    /// </summary>
    public class MotorWithRotaryEncoder
    {
        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderCreate")]
        public static extern int Create(int bridgeIn1, int bridgeIn2, int bridgePwm, int encoderA, int encoderB, int encoderIndex, int countsPerRevolution, EncoderUpdatedCallback callback);

        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderRemove")]
        public static extern void Remove(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderResetCount")]
        public static extern void ResetCount(int index, int setCount);

        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderGetCount")]
        public static extern int GetCount(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderGetCircle")]
        public static extern double GetCircle(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderGetRpm")]
        public static extern double GetRpm(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderGetTickFrequency")]
        public static extern double GetTickFrequency(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderGetFrequency")]
        public static extern double GetFrequency(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderRun")]
        public static extern void Run(int index, double power);

        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderStop")]
        public static extern void Stop(int index);

        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderBrake")]
        public static extern void Brake(int index, double power);

        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderTurnBy")]
        public static extern void TurnBy(int index, double rotations, double power);

        [DllImport("libWiringPiExtension.so", EntryPoint = "MotorWithRotaryEncoderHoldAt")]
        public static extern void HoldAt(int index, double circle, double power);
    }


}